Attempt to fix the distorted display on chrome

--- a/src/main/webapp/app/overview/course-card.scss
+++ b/src/main/webapp/app/overview/course-card.scss
@@ -81,7 +81,7 @@
         canvas {
             cursor: pointer;
             z-index: 1;
-            width: 200px;
+            width: 150px;
             height: 150px;
         }
     }
